force-app/main/default/objects/Pay_Slip__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Deduction_Item_1__c</fullName>
        <label>Amount Deduction Item 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Deduction_Item_2__c</fullName>
        <label>Amount Deduction Item 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Income_Item_1__c</fullName>
        <label>Amount Income Item 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Income_Item_2__c</fullName>
        <label>Amount Income Item 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copy_Exchange_Rate_Gain_Loss_Worflow__c</fullName>
        <label>Copy  Exchange Rate Gain/Loss (Worflow)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Exchange_Rate_Losses__c</fullName>
        <label>Copy Exchange Rate Gains/Losses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Gross_Salary__c</fullName>
        <formula>IF( 
  Salary__c&gt;= 1000000, 
  TEXT(FLOOR(Salary__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Salary__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Salary__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Salary__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Salary__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Salary__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Salary__c , 1), 2) * 100, 99)) 
)&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Gross Salary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Housing_Allowance__c</fullName>
        <formula>IF( 
  Housing_Allowance__c&gt;= 1000000, 
  TEXT(FLOOR(Housing_Allowance__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Housing_Allowance__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Housing_Allowance__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Housing_Allowance__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Housing_Allowance__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Housing_Allowance__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Housing_Allowance__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Housing Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Income_Item_1__c</fullName>
        <formula>IF( 
  Amount_Income_Item_1__c&gt;= 1000000, 
  TEXT(FLOOR(Amount_Income_Item_1__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Amount_Income_Item_1__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Amount_Income_Item_1__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount_Income_Item_1__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Amount_Income_Item_1__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount_Income_Item_1__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Amount_Income_Item_1__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Income Item 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Income_Item_2__c</fullName>
        <formula>IF( 
  Amount_Income_Item_2__c&gt;= 1000000, 
  TEXT(FLOOR(Amount_Income_Item_2__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Amount_Income_Item_2__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Amount_Income_Item_2__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount_Income_Item_2__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Amount_Income_Item_2__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount_Income_Item_2__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Amount_Income_Item_2__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Income Item 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Income_Tax__c</fullName>
        <formula>IF( 
  Income_Tax_Paid_by_Employee__c&gt;= 1000000, 
  TEXT(FLOOR(Income_Tax_Paid_by_Employee__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Income_Tax_Paid_by_Employee__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Income_Tax_Paid_by_Employee__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Income_Tax_Paid_by_Employee__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Income_Tax_Paid_by_Employee__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Income_Tax_Paid_by_Employee__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Income_Tax_Paid_by_Employee__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Income Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Other_Taxes_paid_by_School__c</fullName>
        <formula>IF( 
Social_Security_Paid_by_Employee__c&gt;= 1000000, 
  TEXT(FLOOR(Other_Taxes_Paid_by_School__c/ 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
Other_Taxes_Paid_by_School__c&gt;= 1000, 
  RIGHT(TEXT(FLOOR(Other_Taxes_Paid_by_School__c/ 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Other_Taxes_Paid_by_School__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Other_Taxes_Paid_by_School__c, 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Other_Taxes_Paid_by_School__c, 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Other_Taxes_Paid_by_School__c, 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Other Taxes paid by School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Refund_Travel_Expenses__c</fullName>
        <formula>IF( 
  Refund_Travel_Visa_Expenses__c&gt;= 1000000, 
  TEXT(FLOOR(Refund_Travel_Visa_Expenses__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Refund_Travel_Visa_Expenses__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Refund_Travel_Visa_Expenses__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Refund_Travel_Visa_Expenses__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Refund_Travel_Visa_Expenses__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Refund_Travel_Visa_Expenses__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Refund_Travel_Visa_Expenses__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Refund Travel Expenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Relocation_Allowance__c</fullName>
        <formula>IF( 
  Relocation_Allowance__c&gt;= 1000000, 
  TEXT(FLOOR(Relocation_Allowance__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Relocation_Allowance__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Relocation_Allowance__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Relocation_Allowance__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Relocation_Allowance__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Relocation_Allowance__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Relocation_Allowance__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Relocation Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Retention_Bonus_Seperator__c</fullName>
        <formula>IF( 
Retention_Bonus__c &gt;= 1000000, 
TEXT(FLOOR(Retention_Bonus__c  / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Retention_Bonus__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Retention_Bonus__c  / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Retention_Bonus__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Retention_Bonus__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Retention_Bonus__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Retention_Bonus__c  , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Retention Bonus Seperator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_SS_Paid_by_Employee__c</fullName>
        <formula>IF( 
Social_Security_Paid_by_Employee__c&gt;= 1000000, 
  TEXT(FLOOR(Social_Security_Paid_by_Employee__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
Social_Security_Paid_by_Employee__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Social_Security_Paid_by_Employee__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Social_Security_Paid_by_Employee__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Social_Security_Paid_by_Employee__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Social_Security_Paid_by_Employee__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Social_Security_Paid_by_Employee__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy SS Paid by Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_SS_paid_by_School__c</fullName>
        <formula>IF( 
  Social_Security_Paid_by_School__c&gt;= 1000000, 
  TEXT(FLOOR(Social_Security_Paid_by_School__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Social_Security_Paid_by_School__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Social_Security_Paid_by_School__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Social_Security_Paid_by_School__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Social_Security_Paid_by_School__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Social_Security_Paid_by_School__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Social_Security_Paid_by_School__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy SS paid by School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Salary_Currency_Worflow__c</fullName>
        <label>Copy Salary Currency (Worflow)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Salary_base_currency__c</fullName>
        <formula>IF(TEXT(  Employment_Agreement__r.CurrencyIsoCode  )= TEXT(CurrencyIsoCode ),&quot;&quot;,IF( 
Salary_Base_Currency__c&gt;= 1000000, 
TEXT(FLOOR(Salary_Base_Currency__c/ 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;)) &amp; 
IF( 
Salary_Base_Currency__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Salary_Base_Currency__c/ 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Salary_Base_Currency__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Salary_Base_Currency__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Salary_Base_Currency__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Salary_Base_Currency__c , 1), 2) * 100, 99)) 
)&amp;&quot; &quot;&amp;TEXT(Employment_Agreement__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Salary base currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperato_Other_Bonus__c</fullName>
        <formula>IF( 
Other_Bonus_Amount__c &gt;= 1000000, 
TEXT(FLOOR(Other_Bonus_Amount__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Other_Bonus_Amount__c  &gt;= 1000, 
RIGHT(TEXT(FLOOR(Other_Bonus_Amount__c  / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Other_Bonus_Amount__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Other_Bonus_Amount__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Other_Bonus_Amount__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Other_Bonus_Amount__c  , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperato Other Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Deduction_Item_1__c</fullName>
        <formula>IF( 
  Amount_Deduction_Item_1__c&gt;= 1000000, 
  TEXT(FLOOR(Amount_Deduction_Item_1__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Amount_Deduction_Item_1__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Amount_Deduction_Item_1__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount_Deduction_Item_1__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Amount_Deduction_Item_1__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount_Deduction_Item_1__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Amount_Deduction_Item_1__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Deduction Item 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Deduction_Item_2__c</fullName>
        <formula>IF( 
  Amount_Deduction_Item_2__c&gt;= 1000000, 
  TEXT(FLOOR(Amount_Deduction_Item_2__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Amount_Deduction_Item_2__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Amount_Deduction_Item_2__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount_Deduction_Item_2__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Amount_Deduction_Item_2__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount_Deduction_Item_2__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Amount_Deduction_Item_2__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Deduction Item 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Exchange_Rate_Deductions__c</fullName>
        <formula>IF( 
Deduction_Exchange_Rate_Differences__c &gt;= 1000000, 
TEXT(FLOOR(Deduction_Exchange_Rate_Differences__c  / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Deduction_Exchange_Rate_Differences__c &gt;= 1000, 
RIGHT(TEXT(FLOOR( Deduction_Exchange_Rate_Differences__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR( Deduction_Exchange_Rate_Differences__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD( Deduction_Exchange_Rate_Differences__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD( Deduction_Exchange_Rate_Differences__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD( Deduction_Exchange_Rate_Differences__c  , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Exchange Rate Deductions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Performance_Bonus__c</fullName>
        <formula>IF( 
 Performance_Bonus__c &gt;= 1000000, 
TEXT(FLOOR(Relocation_Allowance__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
 Performance_Bonus__c &gt;= 1000, 
RIGHT(TEXT(FLOOR( Performance_Bonus__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR( Performance_Bonus__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD( Performance_Bonus__c , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD( Performance_Bonus__c , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD( Performance_Bonus__c , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Performance Bonus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Refund_Exchange_Rate__c</fullName>
        <formula>IF( 
Responsibility_Points__c &gt;= 1000000, 
TEXT(FLOOR( Refund_Exchange_Rate_Differences__c  / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Refund_Exchange_Rate_Differences__c  &gt;= 1000, 
RIGHT(TEXT(FLOOR(Refund_Exchange_Rate_Differences__c  / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Refund_Exchange_Rate_Differences__c  )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Refund_Exchange_Rate_Differences__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Refund_Exchange_Rate_Differences__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Refund_Exchange_Rate_Differences__c  , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Refund Exchange Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Seperator_Responsibility_Points__c</fullName>
        <formula>IF( 
Responsibility_Points__c &gt;= 1000000, 
TEXT(FLOOR( Responsibility_Points__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Responsibility_Points__c  &gt;= 1000, 
RIGHT(TEXT(FLOOR(Responsibility_Points__c  / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Responsibility_Points__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD(Responsibility_Points__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Responsibility_Points__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Responsibility_Points__c , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Seperator Responsibility Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Staff_Email__c</fullName>
        <formula>Employment_Agreement__r.Staff_Member__r.Email_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Staff Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Bonus_Amounts__c</fullName>
        <formula>IF( Performance_Bonus__c =0,&quot;&quot;,  Copy_Seperator_Performance_Bonus__c &amp;BR())&amp;IF( Retention_Bonus__c=0,&quot;&quot;,  Copy_Retention_Bonus_Seperator__c &amp;BR())&amp;IF(  Other_Bonus_Amount__c  =0,&quot;&quot;,  Copy_Seperato_Other_Bonus__c &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Bonus Amounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Bonus_Items__c</fullName>
        <formula>IF(  Performance_Bonus__c  =0,&quot;&quot;, &quot;(+) Performance Bonus&quot; &amp;BR())&amp;IF( Retention_Bonus__c =0,&quot;&quot;,&quot;(+) Retention Bonus&quot;&amp;BR())&amp;IF(  Other_Bonus_Name__c  =&quot;&quot;,&quot;&quot;,&quot;(+) &quot;&amp; Other_Bonus_Name__c &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Bonus Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Currency_Conversion__c</fullName>
        <formula>IF( Exchange_Rate_Managment__c =FALSE,&quot;&quot;,IF( TEXT( Employment_Agreement__r.CurrencyIsoCode )= TEXT(CurrencyIsoCode ),&quot;&quot;,(&quot;The salary portion of your Pay Slip (&quot;&amp;  Copy_Gross_Salary__c  &amp;&quot;) is equivalent to &quot;&amp;  Copy_Salary_Currency_Worflow__c&amp;&quot; &quot;&amp;&quot; at an exchange rate of 1 &quot;&amp;TEXT( Employment_Agreement__r.CurrencyIsoCode )&amp;&quot; = &quot;&amp; TEXT(Exchange_Rate__c) &amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode))&amp;&quot;. According to your contract you should have received &quot;&amp;  Employment_Agreement__r.Copy_Text_Monthly_Salary_12_Payments__c&amp;&quot;. You have therefore been &quot;&amp; Exchange_Rate_Overpaid_Underpaid__c &amp;&quot; by &quot;&amp;TEXT(  Copy_Exchange_Rate_Gain_Loss_Worflow__c ) &amp;&quot; &quot;&amp; TEXT( Employment_Agreement__r.CurrencyIsoCode ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Currency Conversion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_From_Date__c</fullName>
        <formula>TEXT(DAY(  From__c )) + &quot;/&quot; + 
TEXT(MONTH(From__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(From__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text From Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Other_Amounts_4__c</fullName>
        <formula>IF(  Refund_Exchange_Rate_Differences__c =0,&quot;&quot;,  Copy_Seperator_Refund_Exchange_Rate__c &amp;BR())&amp;IF(   Deduction_Exchange_Rate_Differences__c  =0,&quot;&quot;,   Copy_Seperator_Exchange_Rate_Deductions__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Other Amounts 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Other_Items_4__c</fullName>
        <formula>IF(  Refund_Exchange_Rate_Differences__c =0,&quot;&quot;,  &quot;(+) Refund Exchange Rate Differences&quot;&amp;BR())&amp;IF(   Deduction_Exchange_Rate_Differences__c =0,&quot;&quot;,  &quot;(-) Deduction Exchange Rate Differences&quot;&amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Other Items 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Amounts_1__c</fullName>
        <formula>IF(  Housing_Allowance__c  =0,&quot;&quot;, Copy_Housing_Allowance__c &amp;BR())&amp;IF(  Travel_Allowance__c =0,&quot;&quot;,  Copy_Travel_Allowance__c &amp;BR())&amp;IF(  Relocation_Allowance__c  =0,&quot;&quot;,  Copy_Relocation_Allowance__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Amounts 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Amounts_2__c</fullName>
        <formula>IF(  Refund_Travel_Visa_Expenses__c   =0,&quot;&quot;,   Copy_Refund_Travel_Expenses__c   &amp;BR())&amp;IF(  Amount_Income_Item_1__c  =0,&quot;&quot;,     Copy_Income_Item_1__c   &amp;BR())&amp;IF( Amount_Income_Item_2__c =0,&quot;&quot;, Copy_Income_Item_2__c &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Amounts 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Amounts_3__c</fullName>
        <formula>IF(   Amount_Deduction_Item_1__c  =0,&quot;&quot;,       Copy_Seperator_Deduction_Item_1__c   &amp;BR())&amp;IF(   Amount_Deduction_Item_2__c  =0,&quot;&quot;,       Copy_Seperator_Deduction_Item_2__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Amounts 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Items_1__c</fullName>
        <formula>IF( Housing_Allowance__c =0,&quot;&quot;, &quot;(+) Housing Allowance&quot; &amp;BR())&amp;IF( Travel_Allowance__c =0,&quot;&quot;, &quot;(+) Travel Allowance&quot;&amp;BR())&amp;IF( Relocation_Allowance__c =0,&quot;&quot;, &quot;(+) Relocation Allowance&quot; &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Items 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Items_2__c</fullName>
        <formula>IF( Refund_Travel_Visa_Expenses__c =0,&quot;&quot;, &quot;(+) Refund Travel/Visa Expenses&quot; &amp;BR())&amp;IF( Amount_Income_Item_1__c =0,&quot;&quot;,&quot;(+) &quot;&amp;   Text_Income_Item_1__c  &amp;BR())&amp;IF( Amount_Income_Item_2__c =0,&quot;&quot;,&quot;(+) &quot;&amp;    Description_Income_Item_2__c   &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Items 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Other_Items_3__c</fullName>
        <formula>IF( Amount_Deduction_Item_1__c =0,&quot;&quot;,&quot;(-) &quot;&amp;  Description_Deduction_Item_1__c  &amp;BR())&amp;IF( Amount_Deduction_Item_2__c =0,&quot;&quot;, &quot;(-) &quot;&amp; Description_Deduction_Item_2__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Other Items 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Salary_Amounts__c</fullName>
        <formula>IF( Salary__c =0,&quot;&quot;, Copy_Gross_Salary__c &amp;BR())&amp;IF( Responsibility_Points__c =0,&quot;&quot;,  Copy_Seperator_Responsibility_Points__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Salary Amounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_PaySlip_Salary_Items__c</fullName>
        <formula>IF( Salary__c =0,&quot;&quot;, 

IF( AND ( Salary__c &lt;&gt; 0, School__c = &quot;The British College of Brazil&quot;),

&quot;(+) Net Salary&quot;&amp;BR(), &quot;(+) Salary&quot;&amp;BR()))

&amp;IF( Responsibility_Points__c =0,&quot;&quot;, &quot;(+) Responsibility Point(s)&quot;&amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text PaySlip Salary Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Tally_Exchange_Rate_Gains_Loss__c</fullName>
        <formula>IF( Exchange_Rate_Managment__c =FALSE,&quot;&quot;,(IF( TEXT(Employment_Agreement__r.CurrencyIsoCode) = TEXT(CurrencyIsoCode ),&quot;&quot;,IF( Refund_Exchange_Rate_Differences__c-Deduction_Exchange_Rate_Differences__c=0,&quot;&quot;, &quot;. Note that you have also received  a currency exchange adjustment in this Pay Slip&quot;))))&amp; IF( Exchange_Rate_Managment__c =FALSE,&quot;&quot;,(IF( TEXT(Employment_Agreement__r.CurrencyIsoCode)= TEXT(CurrencyIsoCode ),&quot;&quot;,&quot;. This will be included in your exchange rate compensation account, which currently is &quot;&amp; Employment_Agreement__r.Copy_Tally_Exchange_Rate_Gains_Losses__c &amp;&quot; &quot;&amp;TEXT( Employment_Agreement__r.CurrencyIsoCode )&amp;IF( Employment_Agreement__r.Tally_Exchange_Rate_Gains_Losses__c  &gt;0,&quot; in the school&apos;s favour.&quot;&amp;BR(), IF( Employment_Agreement__r.Tally_Exchange_Rate_Gains_Losses__c =0,&quot; even between you and the school.&quot;,&quot; in your favour.&quot;&amp;BR())))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Tally Exchange Rate Gains/Loss</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Tax_Amounts__c</fullName>
        <formula>IF(  Income_Tax_Paid_by_Employee__c  =0,&quot;&quot;,  Copy_Income_Tax__c &amp;BR())&amp;IF(  Social_Security_Paid_by_Employee__c  =0,&quot;&quot;,  Copy_SS_Paid_by_Employee__c  &amp;BR())&amp;IF(  Social_Security_Paid_by_School__c  =0,&quot;&quot;,  Copy_SS_paid_by_School__c  &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Tax Amounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Tax_Items__c</fullName>
        <formula>IF(  Income_Tax_Paid_by_Employee__c  =0,&quot;&quot;, &quot;(-) Income Tax Paid by Employee&quot; &amp;BR())&amp;IF(  Social_Security_Paid_by_Employee__c  =0,&quot;&quot;,&quot;(-)  Social Security Paid by Employee&quot;&amp;BR())&amp;IF( Social_Security_Paid_by_School__c  =0,&quot;&quot;,&quot;--- Social Security Paid by School, &quot;  &amp;BR()&amp;&quot;--- not included in Total Due calculation&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Tax Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_To_Date__c</fullName>
        <formula>TEXT(DAY(  To__c )) + &quot;/&quot; + 
TEXT(MONTH(To__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(To__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text To Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Total_to_be_Paid__c</fullName>
        <formula>IF(
   Total_to_be_Paid_Workflow_generated__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
   
      IF(
         Total_to_be_Paid_Workflow_generated__c &gt;= 1000000, 
            TEXT(FLOOR(Total_to_be_Paid_Workflow_generated__c / 1000000)) &amp; &quot;,&quot;, &quot;&quot;)&amp;
            
               IF(
                  Total_to_be_Paid_Workflow_generated__c &gt;= 1000, 
                     RIGHT(TEXT(FLOOR(Total_to_be_Paid_Workflow_generated__c / 1000)), 3) &amp; &quot;,&quot;, 
                     &quot;&quot;) &amp; 
                     RIGHT(TEXT(FLOOR(Total_to_be_Paid_Workflow_generated__c )), 3)&amp;&quot;.&quot;&amp; 
                     
                        IF(
                           Total_to_be_Paid_Workflow_generated__c &lt; 0,
                           
                               IF( 
                                  MOD((Total_to_be_Paid_Workflow_generated__c*(-1)), 1) * 100 &lt; 10, &quot;0&quot; &amp;  
                                  TEXT(round(MOD((Total_to_be_Paid_Workflow_generated__c*(-1)), 1)*100, 2)), 
                                  TEXT(MIN(round(MOD((Total_to_be_Paid_Workflow_generated__c*(-1)), 1)*100, 2), 99)) 
                                  ),
                     
                                     IF( 
                                        MOD(Total_to_be_Paid_Workflow_generated__c, 1) * 100 &lt; 10, &quot;0&quot; &amp;  
                                        TEXT(round(MOD(Total_to_be_Paid_Workflow_generated__c , 1), 2) * 100), 
                                        TEXT(MIN(round(MOD(Total_to_be_Paid_Workflow_generated__c , 1), 2) * 100, 99)) 
                                        )
                            )&amp;
   IF(
      Total_to_be_Paid_Workflow_generated__c &lt; 0, &quot;)&quot;, &quot;&quot;)&amp;
&quot; &quot;&amp;TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Total to be Paid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Travel_Allowance__c</fullName>
        <formula>IF( 
  Travel_Allowance__c&gt;= 1000000, 
  TEXT(FLOOR(Travel_Allowance__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Travel_Allowance__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Travel_Allowance__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Travel_Allowance__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Travel_Allowance__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Travel_Allowance__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Travel_Allowance__c , 1), 2) * 100, 99)) 
)

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Travel Allowance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deduction_Exchange_Rate_Differences__c</fullName>
        <label>Deduction Exchange Rate Differences</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_Deduction_Item_1__c</fullName>
        <label>Description Deduction Item 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Deduction_Item_2__c</fullName>
        <label>Description Deduction Item 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Income_Item_2__c</fullName>
        <label>Description Income Item 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_on_Save__c</fullName>
        <label>Email on Save</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Agreement__c</fullName>
        <label>Employment Agreement Name</label>
        <referenceTo>Employment_Agreement__c</referenceTo>
        <relationshipLabel>Pay Slips</relationshipLabel>
        <relationshipName>Pay_Slips</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exchange_Loss_Gain__c</fullName>
        <formula>IF( Exchange_Rate_Managment__c =FALSE,0,IF( TEXT(Employment_Agreement__r.CurrencyIsoCode)= TEXT(CurrencyIsoCode),0,  Salary_Base_Currency__c -  Employment_Agreement__r.Monthly_Salary_12_Months__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Loss/Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Managment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange Rate Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Overpaid_Underpaid__c</fullName>
        <formula>IF( Exchange_Loss_Gain__c &gt;=0,&quot;OVER PAID&quot;,&quot;UNDER PAID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate Overpaid/Underpaid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
</CustomObject>